@@ -6,7 +6,12 @@ case "`uname -m`" in
   s390*) if file reloc1lib1.so | grep -q 64-bit; then SHFLAGS=-fpic; fi;;
 esac
 # Disable this test under SELinux if textrel
-test -z "$SHFLAGS" -a -x /usr/sbin/getenforce -a "`/usr/sbin/getenforce`" = Enforcing && exit 77
+if test -z "$SHFLAGS" -a -x /usr/sbin/getenforce; then
+  case "`/usr/sbin/getenforce 2>/dev/null`" in
+    Permissive|Disabled) ;;
+    *) exit 77 ;;
+  esac
+fi
 rm -f reloc2 reloc2lib*.so reloc2.log
 $CC -shared $SHFLAGS -O2 -o reloc2lib1.so $srcdir/reloc2lib1.c
 $CC -shared $SHFLAGS -O2 -o reloc2lib2.so $srcdir/reloc2lib2.c \
